--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
+    "request": "^2.81.0",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.2"
   },
