--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "redux": "^3.6.0",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "redux-undo": "^0.6.1",
+    "redux-undo": "beta",
     "request": "^2.81.0",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.2"
