--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "dependencies": {
     "fbemitter": "^2.1.1",
-    "immutable": "v4.0.0-rc.2",
+    "immutable": "beta",
     "jsondiffpatch": "^0.2.4",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.4",
-    "redux": "^3.6.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "redux-undo": "beta",
     "request": "^2.81.0",
     "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.68.2"
+    "semantic-ui-react": "^0.70.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
