--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
     "start-client": "react-scripts start"
   },
   "dependencies": {
-    "axios": "^0.16.2",
-    "body-parser": "^1.17.2",
-    "cookie-parser": "^1.4.3",
-    "copy-to-clipboard": "^3.0.6",
-    "debug": "^2.6.8",
-    "express": "^4.15.3",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "copy-to-clipboard": "^3.2.0",
+    "debug": "^2.6.9",
+    "express": "^4.17.1",
     "fbemitter": "^2.1.1",
-    "immutable": "4.0.0-rc.2",
+    "immutable": "4.0.0-rc.12",
     "jade": "^1.11.0",
-    "lodash": "^4.17.4",
-    "morgan": "^1.8.2",
+    "lodash": "^4.17.15",
+    "morgan": "^1.9.1",
     "normalize.css": "^7.0.0",
-    "prop-types": "^15.5.10",
+    "prop-types": "^15.7.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "redux-undo": "beta",
-    "request": "^2.81.0",
-    "semantic-ui-css": "^2.2.10",
+    "redux-undo": "0.6.1",
+    "request": "^2.88.0",
+    "semantic-ui-css": "2.2.10",
     "semantic-ui-react": "^0.70.0"
   },
   "devDependencies": {
-    "react-scripts": "^1.0.10"
+    "react-scripts": "^1.1.5"
   },
   "now": {
     "alias": "json-editor",
